# AoC

./: .gitignore  LICENSE  README.md  pyproject.toml
log/: log.md
paoc/: __init__.py  cli.py  constants.py  helper.py  play.ipynb  template.py
paoc/misc/: part2completion.ipynb
paoc/y22/: __init__.py  answers.txt  titles.txt
paoc/y22/solutions/: day01.py  day02.py  day05.py  day06.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day3.py  day4.py  day7.py  day8.py  day9.py
paoc/y23/: __init__.py  answers.txt  titles.txt
paoc/y23/solutions/: __init__.py  day01.py  day02.py  day09.py  day10.py  day10dirty.ipynb  day11.py  day12.py  day12dirty.ipynb  day13.py  day14.py  day15.py  day16.py  day17.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
paoc/y24/: __init__.py  answers.txt  titles.txt
paoc/y24/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py
paoc/y25/: __init__.py  answers.txt  titles.txt
paoc/y25/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
