[project]
name = "paoc"
version = "0.0.1"
authors = [{name = "Josef Hamelink", email = "jdhamelink0@gmail.com"}] 
description = "Advent of Code 2023"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "numpy",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
setup = "paoc.cli:setup_cli"
scaffold = "paoc.cli:scaffold_cli"
solve = "paoc.cli:solve_cli"
